컨트롤러, 서비스, 레포지토리 메서드명 통일
메서드 이름을 컨트롤러, 서비스 및 레포지토리에서 동일하게 유지하여코드의 일관성과 가독성을 높임.

--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -130,6 +130,6 @@
 
     pagingElement.appendChild(lastLink);
 </script>
-<button id="post" onclick="location.href='board?cmd=write'">등록</button>
+<button id="post" onclick="location.href='/board/free/write'">등록</button>
 </body>
 </html>
