--- a/src/main/resources/templates/board/boardWriteForm.html
+++ b/src/main/resources/templates/board/boardWriteForm.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <script th:inline="javascript">
-  var urlParams = new URLSearchParams(window.location.search);
-
-  var errorMessage = urlParams.get('errorMessage');
+  var errorMessage = [[${errorMessage}]];
 
   if (errorMessage != null) {
     alert(errorMessage);
