게시글 수정 구현
파일 수정은 아직 미구현임.
게시글을 수정 후 게시글 보기 페이지로 리다이렉트하도록 구현하였음.

--- a/src/main/resources/templates/board/boardUpdateForm.html
+++ b/src/main/resources/templates/board/boardUpdateForm.html
@@ -36,7 +36,7 @@
 </script>
 <h2>게시판 - 수정</h2>
 기본정보
-<form name="myForm" th:action="@{/board/free/modify}"
+<form name="myForm" th:action="@{/board/free/modify/{boardId}(boardId=${boardId})}"
       th:object="${boardUpdateRequestDto}" enctype="multipart/form-data" method="post">
     <table>
         <tr>
