게시글 작성 에러처리 수정 및 게시글 수정 에러처리 구현
예외 발생 시 예외처리 핸들러에서 예외를 처리하며 해당 페이지를 랜더링 하는 방식으로 구현하였음.

--- a/src/main/resources/templates/board/boardUpdateForm.html
+++ b/src/main/resources/templates/board/boardUpdateForm.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <script th:inline="javascript">
+    var errorMessage = [[${errorMessage}]];
+
+    if (errorMessage != null) {
+        alert(errorMessage);
+    }
+
     function validateForm() {
         var writer = document.forms["myForm"]["writer"].value;
 
