--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -6,6 +6,26 @@
 </head>
 <body>
 <h2>게시판 - 보기</h2>
+<style>
+  .modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .modal-content {
+    background-color: #fff;
+    margin: 20% auto;
+    padding: 20px;
+    width: 300px;
+    border-radius: 5px;
+  }
+</style>
 <table>
   <tr>
     <td th:text="${boardDetailResponseDto.writer}"></td>
@@ -49,8 +69,56 @@
     <a href="boardUpdateForm.html" th:href="@{/board/free/modify/{boardId}(boardId=${boardId})}" style="text-decoration:none;">
       <button>수정</button>
     </a>
-    <button onclick="location.href='board'">삭제</button>
-  </td>
+    <button id="deleteButton">삭제</button>
+    </td>
 </table>
 </body>
 </html>
+
+    <!-- 모달 창 -->
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <form th:action="@{/board/free/delete/{boardId}(boardId=${boardId})}" method="post">
+        <table>
+          <tr>
+            <th>비밀번호</th>
+            <td>
+              <input type="password" name="password" placeholder="비밀번호를 입력해 주세요">
+            </td>
+          </tr>
+        </table>
+          <a href="#" id="closeModalButton">취소</a>
+        <button id="confirmModalButton">확인</button>
+        </form>
+      </div>
+    </div>
+
+    <script th:inline="javascript">
+      var errorMessage = [[${errorMessage}]];
+
+      if (errorMessage != null) {
+        alert(errorMessage);
+      }
+
+      var deleteButton = document.getElementById('deleteButton');
+
+      var modal = document.getElementById('myModal');
+
+      var closeButton = document.getElementById('closeModalButton');
+
+      var confirmButton = document.getElementById('confirmModalButton');
+
+      // 삭제 버튼 클릭 시 모달 창 띄우기
+      deleteButton.addEventListener('click', function() {
+        modal.style.display = 'block';
+      });
+
+      // 취소 버튼 클릭 시 모달 창 닫기
+      closeButton.addEventListener('click', function() {
+        event.preventDefault(); // 기본 동작(링크 이동)을 방지
+
+        modal.style.display = 'none';
+      });
+    </script>
+
+
