게시글 삭제 예외처리 수정
기존 데이터를 유지할 필요가 없기에 랜더링이 아닌 리다이렉트하도록 수정하였음.

--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -94,9 +94,13 @@
     </div>
 
     <script th:inline="javascript">
-      var errorMessage = [[${errorMessage}]];
+      // 현재 URL에서 errorMessage 파라미터 값을 읽어옴
+      const urlParams = new URLSearchParams(window.location.search);
 
-      if (errorMessage != null) {
+      const errorMessage = urlParams.get('errorMessage');
+
+      // errorMessage 값이 존재하면 알림 표시
+      if (errorMessage) {
         alert(errorMessage);
       }
 
