검색 조건 유지 적용
모든 링크들에 쿼리파라미터로 BoardSearchCondition을 추가해주어 페이지 이동 시에도 검색조건을 유지할 수 있게 하였음.

--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -65,8 +65,20 @@
     </tr>
   </form>
   <td class="buttons" colspan="4">
-    <button onclick="location.href='/boards/free/list'">목록</button>
-    <a href="boardUpdateForm.html" th:href="@{/board/free/modify/{boardId}(boardId=${boardId})}" style="text-decoration:none;">
+    <a href="boardDetail.html" th:href="@{/boards/free/list/
+    (pageNum=${boardSearch.pageNum},
+    startDate=${boardSearch.startDate},
+    endDate=${boardSearch.endDate},
+    category=${boardSearch.category},
+    keyword=${boardSearch.keyword})}">
+      <button>목록</button>
+    </a>
+    <a href="boardUpdateForm.html" th:href="@{/board/free/modify/{boardId}(boardId=${boardId},
+    pageNum=${boardSearch.pageNum},
+    startDate=${boardSearch.startDate},
+    endDate=${boardSearch.endDate},
+    category=${boardSearch.category},
+    keyword=${boardSearch.keyword})}" style="text-decoration:none;">
       <button>수정</button>
     </a>
     <button id="deleteButton">삭제</button>
@@ -78,7 +90,12 @@
     <!-- 모달 창 -->
     <div id="myModal" class="modal">
       <div class="modal-content">
-        <form th:action="@{/board/free/delete/{boardId}(boardId=${boardId})}" method="post">
+        <form th:action="@{/board/free/delete/{boardId}(boardId=${boardId},
+        pageNum=${boardSearch.pageNum},
+        startDate=${boardSearch.startDate},
+        endDate=${boardSearch.endDate},
+        category=${boardSearch.category},
+        keyword=${boardSearch.keyword})}" method="post">
         <table>
           <tr>
             <th>비밀번호</th>
