파일 업로드 구현
파일을 업로드 하면 UUID 형태로 폴더에 저장시키며 DB에 해당 정보를 저장하도록 구현하였음.
게시글 보기에서는 원본 파일명이 보이도록 구현하였음.

--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -39,7 +39,7 @@
   <tr class="content-row">
     <td colspan="4" class="content" th:text="${boardDetailResponseDto.content}"></td>
   </tr>
-  <tr th:each="file : ${boardDetailResponseDto.fileList}">
+  <tr th:each="file : ${boardDetailResponseDto.fileDtoList}">
     <td colspan="4">
       <a download th:href="@{/upload/{savedName}(savedName=${file.savedName})}">
         <span th:text="${file.originalName}"></span>
