첨부파일 다운로드 구현
Pathvariable로 파일Id를 넘겨주어 파일을 다운로드하도록 구현하였음.

--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -41,7 +41,8 @@
   </tr>
   <tr th:each="file : ${boardDetailResponseDto.fileDtoList}">
     <td colspan="4">
-      <a download th:href="@{/upload/{savedName}(savedName=${file.savedName})}">
+      <a th:href="@{/boards/free/view/file/{fileId}
+      (fileId=${file.fileId})}">
         <span th:text="${file.originalName}"></span>
       </a>
     </td>
