수정 페이지폼 및 예외처리 파일부분 추가 구현
수정폼에서도 파일 목록이 나오게 하였음.
예외처리 시 modelAndView에 파일 정보도 나오게 값을 넘겨 주었음.

--- a/src/main/resources/templates/board/boardUpdateForm.html
+++ b/src/main/resources/templates/board/boardUpdateForm.html
@@ -99,14 +99,15 @@ keyword=${boardSearch.keyword})}"
             <td>
                 <table id="fileTable">
                     <tr th:each="file : ${boardDetailResponseDto.FileDtoList}">
-                            <td>원본이름</td>
+                            <td th:text="${file.originalName}"></td>
                             <td>
-                                <a download href="/upload/">
+                                <a th:href="@{/boards/free/view/file/{fileId}
+                                (fileId=${file.fileId})}">
                                     Download
                                 </a>
                             </td>
                             <td>
-                                x
+                                <button>x</button>
                             </td>
                         </tr>
                 </table>
