--- a/src/main/resources/templates/board/boardUpdateForm.html
+++ b/src/main/resources/templates/board/boardUpdateForm.html
@@ -98,18 +98,29 @@ keyword=${boardSearch.keyword})}"
             <th>파일 첨부</th>
             <td>
                 <table id="fileTable">
+                    <tbody>
+                    <!-- 기존의 파일 행 -->
                     <tr th:each="file : ${boardDetailResponseDto.FileDtoList}">
-                            <td th:text="${file.originalName}"></td>
-                            <td>
-                                <a th:href="@{/boards/free/view/file/{fileId}
-                                (fileId=${file.fileId})}">
-                                    Download
-                                </a>
-                            </td>
-                            <td>
-                                <button>x</button>
-                            </td>
-                        </tr>
+                        <td th:text="${file.originalName}"></td>
+                        <td>
+                            <a th:href="@{/boards/free/view/file/{fileId}(fileId=${file.fileId})}">
+                                Download
+                            </a>
+                        </td>
+                        <td>
+                            삭제<input type="checkbox" name="deleteFileIdList" th:value="${file.fileId}">
+                        </td>
+                    </tr>
+                    <!-- 추가 입력란 -->
+                    <tr th:each="i : ${#numbers.sequence(boardDetailResponseDto.FileDtoList.size(), 2)}"
+                        th:unless="${boardDetailResponseDto.FileDtoList.size() >= 3}">
+                        <td>
+                            <input type="file" name="file">
+                        </td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    </tbody>
                 </table>
             </td>
         </tr>
