파일 첨부 여부 확인 서브쿼리 추가
게시글 목록 페이지에서 첨부여부를 확인할 수 있도록 서브쿼리를 추가하였음.

--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -35,7 +35,7 @@
     </tr>
     <tr th:each="board : ${boardListDto.boardResponseDtoList}">
         <td th:text="${board.categoryName}"></td>
-        <td>첨부여부아직X</td>
+        <td th:text="${board.isAttached == true ? 'O' : 'X'}"></td>
         <td>
             <a href="boardDetail.html" th:href="@{/boards/free/view/{boardId}
             (boardId=${board.boardId},
