게시글 작성, 수정 컨트롤러 부분 리팩토링
파일의 경우도 Dto를 통해 받도록 수정하였음.

--- a/src/main/resources/templates/board/boardUpdateForm.html
+++ b/src/main/resources/templates/board/boardUpdateForm.html
@@ -115,10 +115,8 @@ keyword=${boardSearch.keyword})}"
                     <tr th:each="i : ${#numbers.sequence(boardDetailResponseDto.FileDtoList.size(), 2)}"
                         th:unless="${boardDetailResponseDto.FileDtoList.size() >= 3}">
                         <td>
-                            <input type="file" name="file">
+                            <input type="file" name="files">
                         </td>
-                        <td></td>
-                        <td></td>
                     </tr>
                     </tbody>
                 </table>
