--- a/src/main/resources/templates/board/boardWriteForm.html
+++ b/src/main/resources/templates/board/boardWriteForm.html
@@ -118,11 +118,11 @@ keyword=${boardSearch.keyword})}"
     <tr>
       <th>파일첨부</th>
       <td>
-        <input type="file" name="file">
+        <input type="file" name="files">
         <br>
-        <input type="file" name="file">
+        <input type="file" name="files">
         <br>
-        <input type="file" name="file">
+        <input type="file" name="files">
       </td>
     </tr>
     <tr>
